--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/app.js": "/js/app.js?id=b6832511c9787ce05dc2",
+    "/css/app.css": "/css/app.css?id=b0e203640a71ec68e425"
 }
